--- a/swoole/Dockerfile
+++ b/swoole/Dockerfile
@@ -1,10 +1,6 @@
-FROM tu6ge/nginx-php
+FROM tu6ge/nginx-php:2
 
-RUN echo http://mirrors.ustc.edu.cn/alpine/v3.7/main/  > /etc/apk/repositories \
-	&& echo http://mirrors.ustc.edu.cn/alpine/v3.7/community/  >> /etc/apk/repositories \
-	&& apk update \
-	&& apk upgrade \
-	&& apk add hiredis-dev libmcrypt-dev gmp-dev icu-dev linux-headers musl --virtual .phpize-deps autoconf m4 make g++ gcc \
+RUN apk add hiredis-dev libmcrypt-dev gmp-dev icu-dev linux-headers musl --virtual .phpize-deps autoconf m4 make g++ gcc \
     && pecl download swoole-4.0.2 \
 	&& mkdir -p /tmp/swoole \
     && tar -xf swoole-4.0.2.tgz  -C /tmp/swoole --strip-components=1 \
